<resources>
    <string name="app_name">shiftTestTask</string>
    <string name="name">Name</string>
    <string name="nameHint">John</string>
    <string name="surname">Surname</string>
    <string name="surnameHint">Doe</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_day">Day</string>
    <string name="birthday_month">Month</string>
    <string name="birthday_year">Year</string>
    <string name="firstPassword">Password</string>
    <string name="passwordHint">********</string>
    <string name="secondPassword">Repeat\npassword</string>
    <string name="registrationButton">Registration</string>
    <string name="startLogoDescription">This is start logo</string>
    <string name="greetingButton">Greeting</string>
    <string name="greetingMessage">Welcome</string>
    <string name="exitButton">Exit</string>
    <string name="userLogoDescription">This is user logo</string>

    <string name="negative_name">The length of the name must be\n
        2 or more characters\n
        and consist only of letters</string>
    <string name="negative_birthday">Input correct birthday</string>
    <string name="negative_first_password">The password must be:\n
        Consist of at least 8 characters\n
        Contain at least one letter and number\n
        Contain at least one special character [!@#$%^&amp;*()\|/:]\n
        Not contain spaces
    </string>
    <string name="negative_second_password">Passwords don\'t match</string>

    <string name="shared_preferences">app_preferences</string>
    <string name="user_name">user_name</string>
    <string name="user_surname">user_surname</string>
    <string name="user_day">user_day</string>
    <string name="user_month">user_month</string>
    <string name="user_year">user_year</string>
    <string name="user_password">user_password</string>
    <string name="user_repeat_password">user_repeat_password</string>
    <string name="user_all_checks">user_all_checks</string>
    <string name="user_birthday_check">user_birthday_check</string>

</resources>