<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/registrationLogo"
        android:contentDescription="@string/startLogoDescription"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/register_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textSize="@dimen/text_font_size"
        app:layout_constraintEnd_toStartOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationLogo" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_theme"
        android:ems="7"
        android:hint="@string/nameHint"
        android:autofillHints="@string/name"
        android:inputType="text"
        android:text=""
        android:textSize="@dimen/edittext_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registrationLogo"
        app:layout_constraintTop_toTopOf="@+id/textName" />

    <TextView
        android:id="@+id/textSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/surname"
        android:textSize="@dimen/text_font_size"
        app:layout_constraintEnd_toStartOf="@+id/inputSurname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_theme"
        android:ems="7"
        android:hint="@string/surnameHint"
        android:autofillHints="@string/surname"
        android:inputType="text"
        android:text=""
        android:textSize="@dimen/edittext_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toTopOf="@+id/textSurname" />

    <TextView
        android:id="@+id/textBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/birthday"
        android:textSize="@dimen/text_font_size"
        app:layout_constraintEnd_toStartOf="@+id/inputBirthday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSurname" />

    <EditText
        android:id="@+id/inputBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_theme"
        android:ems="7"
        android:hint="@string/birthdayHint"
        android:autofillHints="@string/birthday"
        android:inputType="number"
        android:text=""
        android:textSize="@dimen/edittext_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textBirthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputSurname"
        app:layout_constraintTop_toTopOf="@+id/textBirthday" />

    <TextView
        android:id="@+id/textFirstPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/firstPassword"
        android:textSize="@dimen/text_font_size"
        app:layout_constraintEnd_toStartOf="@+id/inputFirstPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBirthday" />

    <EditText
        android:id="@+id/inputFirstPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_theme"
        android:ems="7"
        android:hint="@string/passwordHint"
        android:autofillHints="@string/firstPassword"
        android:inputType="textPassword"
        android:textSize="@dimen/edittext_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textFirstPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputBirthday"
        app:layout_constraintTop_toTopOf="@+id/textFirstPassword" />

    <TextView
        android:id="@+id/textSecondPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/secondPassword"
        android:textSize="@dimen/text_font_size"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/inputSecondPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstPassword" />

    <EditText
        android:id="@+id/inputSecondPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_theme"
        android:ems="7"
        android:hint="@string/passwordHint"
        android:autofillHints="@string/firstPassword"
        android:inputType="textPassword"
        android:textSize="@dimen/edittext_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/textSecondPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputFirstPassword"
        app:layout_constraintTop_toTopOf="@+id/textSecondPassword" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationButton"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSecondPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>